--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -990,5 +990,13 @@
     "Import finished": "\u0648\u0627\u0631\u062f \u06a9\u0631\u062f\u0646 \u0627\u0637\u0644\u0627\u0639\u0627\u062a \u0641\u0627\u06cc\u0644 \u067e\u0634\u062a\u06cc\u0628\u0627\u0646\u06cc \u0627\u0646\u062c\u0627\u0645 \u06af\u0631\u062f\u06cc\u062f",
     "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
     "Import full backup": "\u0648\u0627\u0631\u062f \u06a9\u0631\u062f\u0646 \u062a\u0645\u0627\u0645\u06cc \u0627\u0637\u0644\u0627\u0639\u0627\u062a \u0641\u0627\u06cc\u0644 \u067e\u0634\u062a\u06cc\u0628\u0627\u0646\u06cc",
-    "Let me select learning objects": "\u0628\u062e\u0634\u0647\u0627\u06cc \u0627\u06cc\u0646 \u062f\u0631\u0633 \u0631\u0627 \u062e\u0648\u062f \u0645\u0634\u062e\u0635 \u062e\u0648\u0627\u0647\u0645 \u06a9\u0631\u062f"
+    "Let me select learning objects": "\u0628\u062e\u0634\u0647\u0627\u06cc \u0627\u06cc\u0646 \u062f\u0631\u0633 \u0631\u0627 \u062e\u0648\u062f \u0645\u0634\u062e\u0635 \u062e\u0648\u0627\u0647\u0645 \u06a9\u0631\u062f",
+    "Select items": "Select items",
+    "Recycle course": "\u0628\u0627\u0632\u06cc\u0627\u0641\u062a \u062f\u0631\u0633",
+    "Skip same file name": "\u0627\u0632 \u0631\u0648\u06cc \u0641\u0627\u06cc\u0644\u0647\u0627\u06cc \u062f\u0627\u0631\u0627\u06cc \u06cc\u06a9 \u0646\u0627\u0645 \u06af\u0630\u0634\u062a\u0646",
+    "Rename file (eg file.pdf becomes file_1.pdf)": "\u062a\u063a\u06cc\u06cc\u0631 \u0646\u0627\u0645 \u0641\u0627\u06cc\u0644\u0647\u0627\u06cc \u0642\u062f\u06cc\u0645\u06cc\u061f",
+    "Overwrite file": "\u062c\u0627\u06cc\u06af\u0632\u06cc\u0646\u06cc \u0641\u0627\u06cc\u0644\u0647\u0627\u06cc \u0642\u062f\u06cc\u0645\u06cc \u0628\u0627 \u0641\u0627\u06cc\u0644\u0647\u0627\u06cc \u062c\u062f\u06cc\u062f\u061f",
+    "Selected items": "Selected items",
+    "Scope": "Scope",
+    "Select source": "Select source"
 }
