--- a/assets/locales/my_MM.json
+++ b/assets/locales/my_MM.json
@@ -1152,5 +1152,14 @@
     "Import finished": "\u1010\u1004\u103a\u101e\u103d\u1004\u103a\u1038\u1019\u103e\u102f\u1015\u103c\u102e\u1038\u1005\u102e\u1038\u1015\u103c\u102e\u1038",
     "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
     "Import full backup": "\u1015\u103c\u100a\u1037\u103a\u1005\u102f\u1036\u101e\u1031\u102c \u1021\u101b\u1014\u103a\u101e\u102d\u1019\u103a\u1038\u1006\u100a\u103a\u1038\u1019\u103e\u102f\u1010\u1004\u103a\u101e\u103d\u1004\u103a\u1038\u1015\u102b",
-    "Let me select learning objects": "\u1000\u103b\u103d\u1014\u103a\u102f\u1015\u103a\u1021\u102c\u1038 \u101e\u1004\u103a\u101a\u1030\u1019\u103e\u102f\u1021\u101b\u102c\u101d\u1010\u1039\u1011\u102f\u1019\u103b\u102c\u1038\u1000\u102d\u102f \u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1001\u103d\u1004\u1037\u103a\u1015\u103c\u102f\u1015\u102b"
+    "Let me select learning objects": "\u1000\u103b\u103d\u1014\u103a\u102f\u1015\u103a\u1021\u102c\u1038 \u101e\u1004\u103a\u101a\u1030\u1019\u103e\u102f\u1021\u101b\u102c\u101d\u1010\u1039\u1011\u102f\u1019\u103b\u102c\u1038\u1000\u102d\u102f \u101b\u103d\u1031\u1038\u1001\u103b\u101a\u103a\u1001\u103d\u1004\u1037\u103a\u1015\u103c\u102f\u1015\u102b",
+    "Select items": "Select items",
+    "Recycle course": "\u101e\u1004\u103a\u1010\u1014\u103a\u1038\u1015\u103c\u1014\u103a\u101c\u100a\u103a\u1021\u101e\u102f\u1036\u1038\u1015\u103c\u102f\u1015\u102b",
+    "Skip same file name": "\u1010\u1030\u100a\u102e\u101e\u1031\u102c \u1016\u102d\u102f\u1004\u103a\u1021\u1019\u100a\u103a\u1000\u102d\u102f \u1000\u103b\u1031\u102c\u103a\u1015\u102b",
+    "Rename file (eg file.pdf becomes file_1.pdf)": "\u1016\u102d\u102f\u1004\u103a\u1021\u1019\u100a\u103a\u1015\u103c\u1031\u102c\u1004\u103a\u1038\u1015\u102b (\u1025\u1015\u1019\u102c file.pdf \u101e\u100a\u103a file_1.pdf \u1016\u103c\u1005\u103a\u101c\u102c\u101e\u100a\u103a)",
+    "Overwrite file": "\u1016\u102d\u102f\u1004\u103a\u1000\u102d\u102f \u1011\u1015\u103a\u101b\u1031\u1038\u1015\u102b",
+    "Selected items": "Selected items",
+    "IMS Common Cartridge v1.3": "IMS Common Cartridge v1.3",
+    "Scope": "Scope",
+    "Select source": "Select source"
 }
