--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -811,5 +811,13 @@
     "Import finished": "\u0e01\u0e32\u0e23\u0e19\u0e33\u0e40\u0e02\u0e49\u0e32\u0e40\u0e23\u0e35\u0e22\u0e1a\u0e23\u0e49\u0e2d\u0e22\u0e41\u0e25\u0e49\u0e27",
     "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
     "Import full backup": "\u0e19\u0e33\u0e40\u0e02\u0e49\u0e32\u0e44\u0e1f\u0e25\u0e4c\u0e17\u0e35\u0e48\u0e2a\u0e33\u0e23\u0e2d\u0e07\u0e44\u0e27\u0e49\u0e17\u0e31\u0e49\u0e07\u0e0a\u0e38\u0e14",
-    "Let me select learning objects": "\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e2a\u0e48\u0e27\u0e19\u0e1b\u0e23\u0e30\u0e01\u0e2d\u0e1a\u0e02\u0e2d\u0e07\u0e23\u0e32\u0e22\u0e27\u0e34\u0e0a\u0e32"
+    "Let me select learning objects": "\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e2a\u0e48\u0e27\u0e19\u0e1b\u0e23\u0e30\u0e01\u0e2d\u0e1a\u0e02\u0e2d\u0e07\u0e23\u0e32\u0e22\u0e27\u0e34\u0e0a\u0e32",
+    "Select items": "Select items",
+    "Recycle course": "\u0e19\u0e33\u0e27\u0e34\u0e0a\u0e32\u0e40\u0e14\u0e34\u0e21\u0e21\u0e32\u0e40\u0e1b\u0e34\u0e14\u0e43\u0e2b\u0e21\u0e48",
+    "Skip same file name": "\u0e02\u0e49\u0e32\u0e21\u0e44\u0e1f\u0e25\u0e4c\u0e17\u0e35\u0e48\u0e21\u0e35\u0e0a\u0e37\u0e48\u0e2d\u0e40\u0e14\u0e35\u0e22\u0e27\u0e01\u0e31\u0e19",
+    "Rename file (eg file.pdf becomes file_1.pdf)": "\u0e40\u0e1b\u0e25\u0e35\u0e48\u0e22\u0e19\u0e0a\u0e37\u0e48\u0e2d\u0e44\u0e1f\u0e25\u0e4c(\u0e40\u0e0a\u0e48\u0e19 prachid.pdf \u0e40\u0e1b\u0e47\u0e19 prachid_1.pdf)",
+    "Overwrite file": "\u0e1a\u0e31\u0e19\u0e17\u0e36\u0e01\u0e17\u0e31\u0e1a\u0e44\u0e1f\u0e25\u0e4c\u0e40\u0e14\u0e34\u0e21",
+    "Selected items": "Selected items",
+    "Scope": "Scope",
+    "Select source": "Select source"
 }
