--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -1142,5 +1142,14 @@
     "Import finished": " \u0627\u0646\u062a\u0647\u062a \u0639\u0645\u0644\u064a\u0629 \u0627\u0644\u0625\u0633\u062a\u0631\u0627\u062f",
     "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
     "Import full backup": " \u0627\u0633\u062a\u0631\u0627\u062f \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0625\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0627\u0644\u0643\u0627\u0645\u0644\u0629",
-    "Let me select learning objects": " \u062f\u0639\u0646\u064a \u0627\u062d\u062f\u062f \u0645\u062d\u062a\u0648\u064a\u0627\u062a \u0627\u0644\u0645\u0642\u0631\u0631"
+    "Let me select learning objects": " \u062f\u0639\u0646\u064a \u0627\u062d\u062f\u062f \u0645\u062d\u062a\u0648\u064a\u0627\u062a \u0627\u0644\u0645\u0642\u0631\u0631",
+    "Select items": "Select items",
+    "Recycle course": " \u0623\u0639\u062f  \u0627\u0633\u062a\u062e\u062f\u0627\u0645 \u0645\u0642\u0631\u0631",
+    "Skip same file name": " \u062a\u062c\u0627\u0648\u0632 \u0646\u0641\u0633 \u0627\u0633\u0645 \u0627\u0644\u0645\u0644\u0641",
+    "Rename file (eg file.pdf becomes file_1.pdf)": " \u0623\u0639\u062f \u062a\u0633\u0645\u064a\u0629 \u0627\u0644\u0645\u0644\u0641 (\u0645\u062b\u0627\u0644: file.pdf \u064a\u0635\u0628\u062d file_1.pdf)",
+    "Overwrite file": " \u0623\u0639\u062f \u0627\u0644\u0643\u062a\u0627\u0628\u0629 \u0639\u0644\u0649 \u0627\u0644\u0645\u0644\u0641",
+    "Selected items": "Selected items",
+    "IMS Common Cartridge v1.3": "IMS Common Cartridge v1.3",
+    "Scope": "Scope",
+    "Select source": "Select source"
 }
