--- a/assets/locales/bg.json
+++ b/assets/locales/bg.json
@@ -982,5 +982,13 @@
     "Import finished": "\u0412\u044a\u0437\u0441\u0442\u0430\u043d\u043e\u0432\u044f\u0432\u0430\u043d\u0435\u0442\u043e \u0435 \u0438\u0437\u0432\u044a\u0440\u0448\u0435\u043d\u043e.",
     "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
     "Import full backup": "\u041f\u044a\u043b\u043d\u043e \u0432\u044a\u0437\u0441\u0442\u0430\u043d\u043e\u0432\u044f\u0432\u0430\u043d\u0435 \u043e\u0442 \u0430\u0440\u0445\u0438\u0432",
-    "Let me select learning objects": "\u041d\u0435\u043a\u0430 \u0430\u0437 \u0434\u0430 \u0438\u0437\u0431\u0435\u0440\u0430 \u0440\u0435\u0441\u0443\u0440\u0441\u0438\u0442\u0435 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430."
+    "Let me select learning objects": "\u041d\u0435\u043a\u0430 \u0430\u0437 \u0434\u0430 \u0438\u0437\u0431\u0435\u0440\u0430 \u0440\u0435\u0441\u0443\u0440\u0441\u0438\u0442\u0435 \u043d\u0430 \u043a\u0443\u0440\u0441\u0430.",
+    "Select items": "Select items",
+    "Recycle course": "\u0420\u0435\u0446\u0438\u043a\u043b\u0438\u0440\u0430\u043d\u0435 \u043d\u0430 \u043a\u0443\u0440\u0441",
+    "Skip same file name": "\u041d\u0435 \u043f\u0440\u0435\u0437\u0430\u043f\u0438\u0441\u0432\u0430\u0439 \u0444\u0430\u0439\u043b\u0430 \u0441\u044a\u0441 \u0441\u044a\u0449\u043e\u0442\u043e \u0438\u043c\u0435",
+    "Rename file (eg file.pdf becomes file_1.pdf)": "\u041f\u0440\u0435\u0438\u043c\u0435\u043d\u0443\u0432\u0430\u0439 \u0444\u0430\u0439\u043b\u0430 (\u0442.\u0435. file.pdf \u0441\u0442\u0430\u0432\u0430 file_1.pdf)",
+    "Overwrite file": "\u041f\u0440\u0435\u0437\u0430\u043f\u0438\u0448\u0438 \u0444\u0430\u0439\u043b\u0430",
+    "Selected items": "Selected items",
+    "Scope": "Scope",
+    "Select source": "Select source"
 }
