--- a/assets/locales/fi_FI.json
+++ b/assets/locales/fi_FI.json
@@ -929,5 +929,13 @@
     "Import finished": "Tuonti valmis",
     "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
     "Import full backup": "Tuo t\u00e4ysi varmistus",
-    "Let me select learning objects": "Valitsen kurssin komponentit"
+    "Let me select learning objects": "Valitsen kurssin komponentit",
+    "Select items": "Select items",
+    "Recycle course": "K\u00e4yt\u00e4 kurssi uudelleen",
+    "Skip same file name": "Ohita saman niminen tiedosto",
+    "Rename file (eg file.pdf becomes file_1.pdf)": "Nime\u00e4 tiedosto uudellen (esim file.pdf -> file_1.pdf)",
+    "Overwrite file": "Ylikirjoita tiedosto",
+    "Selected items": "Selected items",
+    "Scope": "Scope",
+    "Select source": "Select source"
 }
