--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -1049,5 +1049,13 @@
     "Import finished": "Import zako\u0144czony",
     "Please choose a .imscc or .zip file.": "Please choose a .imscc or .zip file.",
     "Import full backup": "Importuj pe\u0142n\u0105 kopi\u0119 zapasow\u0105",
-    "Let me select learning objects": "Wyb\u00f3r element\u00f3w kursu, kt\u00f3re b\u0119d\u0105 uwzgl\u0119dnione w kopii zapasowej"
+    "Let me select learning objects": "Wyb\u00f3r element\u00f3w kursu, kt\u00f3re b\u0119d\u0105 uwzgl\u0119dnione w kopii zapasowej",
+    "Select items": "Select items",
+    "Recycle course": "Utylizuj kurs",
+    "Skip same file name": "Pomin pliki o takiej samej nazwie",
+    "Rename file (eg file.pdf becomes file_1.pdf)": "Zmie\u0144 nazw\u0119 pliku (np. plik.pdf zamienia na plik_1.pdf)",
+    "Overwrite file": "Napisz istniej\u0105cy plik",
+    "Selected items": "Selected items",
+    "Scope": "Scope",
+    "Select source": "Select source"
 }
